Fix blurry text by removing unnecessary translate3d transformations

--- a/tooltip.css
+++ b/tooltip.css
@@ -1,7 +1,7 @@
 :root {
     --v-tooltip-left: 50%;
     --v-tooltip-top: 0%;
-    --v-tooltip-translate3d: translate3d(-50%, -110%, 0);
+    --v-tooltip-translate: translate(-50%, -110%);
     --v-tooltip-width: max-content;
     --v-tooltip-background-color: #000000;
     --v-tooltip-color: #ffffff;
@@ -22,7 +22,7 @@
     position: absolute;
     left: var(--v-tooltip-left);
     top: var(--v-tooltip-top);
-    transform: var(--v-tooltip-translate3d);
+    transform: var(--v-tooltip-translate);
     width: var(--v-tooltip-width);
     background-color: var(--v-tooltip-background-color);
     color: var(--v-tooltip-color);
